...
    <string name="title_activity_welcome__screen">Welcome_Screen</string>

    <string name="new_game">NEW GAME</string>
    <string name="continue_game">CONTINUE</string>
    <string name="song_selection">SELECT SONG</string>
    <string name="words_found">FOUND WORDS</string>
    <string name="settings">SETTINGS</string>
    <string name="home_title">SONGLE</string>
    <string name="song_player_title">SONG PLAYER</string>
    <string name="song_player_descr">Click on the name of the song to open its Youtube Link.</string>

    <string name="very_easy">VERY EASY </string>
    <string name="very_easy_description">Display all the words on map and they are divided as very interesting, interesting, boring and not boring.</string>
    <string name="easy">EASY </string>
    <string name="easy_description">Display all the words on map and they are divided as interesting, boring and not boring.</string>
    <string name="normal">NORMAL</string>
    <string name="normal_description">Display only 75% of words on map and they are divided as interesting, boring and not boring.</string>
    <string name="hard">HARD </string>
    <string name="hard_description">Display only 50% of words on map and they are divided as boring and not boring.</string>
    <string name="very_hard">VERY HARD</string>
    <string name="very_hard_description">Display only 25% of words on map and all are unclassified.</string>
    <string name="difficulty">SELECTED DIFFICULTY:</string>

    <string name="walke_mode">You have to be 5 meters near to select a Song word!</string>
    <string name="anywhere_mode">You can select a Song word from anywhere.</string>
    <string name="mode">SELECT GAME MODE</string>

...

    <string name="go_to_found_songs">Found Songs Playlist</string>
    <string name="sure_change_song">Song in progress, if you select to change the song the progress will be lost!!</string>
    <string name="yes_change_song">Change</string>
    <string name="no_dont_change_song">Continue</string>

    <string name="sure_change_level">Current song progress will be lost by changing level!!!</string>
    <string name="yes_change_level">Change !</string>
    <string name="no_dont_change_level">Dont Change !</string>

    <string name="sure_change_mode">If you are on near mode you will be awarded more points! If you change it once you loose the 10 points Bonus!!!!</string>
    <string name="yes_change_mode">Change !</string>
    <string name="no_dont_change_mode">Dont Change !</string>

    <string name="sure_solve">Are you Sure? No points for given solutions!!!</string>
...
    <string name="no_dont_solve_song">Continue Trying.</string>


    <string name="sure_new_game">Game is in Progress!!</string>
    <string name="yes_new_game">New Game!</string>
    <string name="no_new_game">Continue!</string>
    <string name="OK">OK</string>

    <string name="no_wifi"> The game downloads files online. Internet access is required.</string>
    <string name="retry">Retry</string>
    <string name="no_location_near"> Location is enabled!Distance and near mode requires location!</string>


    <string name="wrong_answer"> Wrong Answer. Try Again.</string>

    <string name="sure_hint"> Showing song artist cost 10 points</string>
    <string name="yes_hint"> SHOW</string>
    <string name="no_hint">CANCEL</string>

    <string name="sure_distance"> Location is enabled.
        Distance will not be changed.
        You can continue but distance walked will not be updated.</string>
    <string name="sure_add">Location is enabled.
       You are near mode, distance from marker cannot be calculated without enabling Location.
...
