...
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="1dp"
        app:layout_constraintVertical_bias="0.49"
        app:layout_constraintHorizontal_bias="0.502" />

    <Button
        android:id="@+id/settings_button"
        android:layout_width="220dp"
        android:layout_height="57dp"
        android:text="@string/settings"
        android:visibility="visible"
        android:textSize="20sp"
        android:textColor="@color/MintCream"
...
